# zephyr

./: west.yml
boards/riscv/hpm6750evkmini/: Kconfig.board  Kconfig.defconfig  hpm6750evkmini-pinctrl.dtsi  hpm6750evkmini.dts  hpm6750evkmini.yaml  hpm6750evkmini_defconfig
boards/riscv/hpm6750evkmini/doc/: index.rst
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.hpmicro  gpio_hpmicro.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.hpmicro  pinctrl_hpmicro.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.hpmicro  uart_hpmicro.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/gpio/: hpmicro,hpm-gpio.yaml
dts/bindings/pinctrl/: hpmicro,hpm-pinctrl.yaml
dts/bindings/serial/: hpmicro,hpm-uart.yaml
dts/riscv/hpmicro/: hpm6750.dtsi
include/zephyr/drivers/pinctrl/: pinctrl_hpmicro_common.h
include/zephyr/dt-bindings/pinctrl/: hpmicro-pinctrl-common.h
modules/: Kconfig
modules/hal_hpmicro/: CMakeLists.txt  Kconfig
soc/riscv/riscv-privilege/hpmicro/: CMakeLists.txt  Kconfig.defconfig.hpm6360  Kconfig.defconfig.hpm6750  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  linker.ld  pinctrl_soc.h  sections.ld  soc.c  soc.h  start.S  vectors.S
